Configuraitons for read only commited messages

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,6 @@ spring.kafka.consumer.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=amount-widthrawal-event
 spring.kafka.consumer.properties.spring.json.trusted.packages=com.appsdeveloperblog.*
 
+#Configuration to only read commited messages
+#That means, it will only read messages part of a successful transaction
 spring.kafka.consumer.isolation-level=READ_COMMITTED
